# shady

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  ISSUE_error_span.md  ISSUE_pipeline_hanging.md  LSP_COMPLETION_REDESIGN.md  LSP_SETUP.md  README.md  binding.gyp  build.rs  devenv.nix  example.shady  grammar.js  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml
benches/: proc_pipes.rs
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
examples/: deploy.shady  example.shady  just.shady  test_lsp.shady
shady-macros/: Cargo.toml
shady-macros/src/: lib.rs
src/: args.rs  ast.rs  builtins.rs  cli.rs  error.rs  eval.rs  formatter.rs  grammar.json  lib.rs  lsp.rs  main.rs  node-types.json  parser.c  parser.rs  shady.pest  test_utils.rs  typecheck.rs  types.rs
src/builtins/: bool.rs  functional.rs  int.rs  io.rs  list.rs  mod.rs  os.rs  proc.rs  str.rs
tests/: proc.rs  readme.rs
tests/common/: mod.rs
