[package]
name = "shady"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
clap = { version = "4.1.1", features = ["derive", "cargo"] }
os_pipe = "1.1.4"
pest = "2.5.3"
pest_derive = "2.5.3"
shady-macros = { path = "shady-macros" }
snailquote = "0.3.1"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
